<resources>
    <string name="app_name">Splash</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_calendar">Calendar</string>
    <string name="title_analysis">Analysis</string>
    <string name="title_add">Add</string>
    <string name="title_content">Content</string>
    <string name="title_profile">Profile</string>
    <string name="sign_in">Sign In</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="don_t_have_an_account_sign_up">Don\'t have an account? Sign Up!</string>
    <string name="sign_up">Sign Up</string>
    <string name="have_an_account_sign_in">Have an account? Sign In!</string>
    <string name="sign_out">Sign Out</string>
    <string name="add_prompt">Add a new poop for today:</string>
    <string name="profile_info_title">Personal Info</string>
    <string name="profile_name">Name</string>
    <string name="profile_bday">Date of birth</string>
    <string name="profile_bday_prompt">(dd/mm/yyyy)</string>
    <string name="profile_edit">Edit Profile</string>
    <string name="save">Save</string>
    <string name="profile_edit_email">New email</string>
    <string name="profile_confirm_email">Confirm email</string>
    <string name="profile_edit_password">New password</string>
    <string name="profile_confirm_password">Confirm password</string>
    <string name="add_colour"><b>Color:</b></string>
    <string name="add_texture"><b>Texture:</b></string>
    <string name="add_date"><b>Date:</b></string>
    <string name="add_time"><b>Time:</b></string>
    <string name="add_symptom"><b>Symptoms:</b></string>
    <string name="add_factors"><b>Factors:</b></string>
    <string name="add_location"><b>Location:</b></string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="terms_and_services_content">
        <![CDATA[
            Welcome to Splash!<br/><br/>
            By downloading, installing, or using the Splash mobile application, you agree to be bound by the following terms and conditions:<br/><br/>
            <b>1. Purpose:</b> Splash is a mobile application designed to help users track their bowel movements for personal health monitoring and improvement purposes.<br/><br/>
            <b>2. Data Privacy:</b> We understand the sensitive nature of the data you input into Splash. We are committed to protecting your privacy and maintaining the confidentiality of your information. Your bowel movement data will only be used for the purpose of providing you with the tracking and analysis features of the App. We will not share your personal data with third parties without your consent, except as required by law.<br/><br/>
            <b>3. Accuracy of Information:</b> While Splash provides tools for tracking and analyzing bowel movements, it is not intended to diagnose, treat, cure, or prevent any medical conditions. The information provided by the App is for informational purposes only and should not be considered medical advice. Always consult with a healthcare professional for medical advice and treatment.<br/><br/>
            <b>4. User Responsibility:</b> You are solely responsible for the accuracy, completeness, and legality of the data you input into Splash. You agree not to input any unlawful, harmful, threatening, abusive, harassing, defamatory, vulgar, obscene, or otherwise objectionable content into the App.<br/><br/>
            <b>5. Appropriate Use:</b> You agree to use Splash in accordance with all applicable laws, regulations, and guidelines. You will not use the App for any illegal or unauthorized purpose, including but not limited to violating intellectual property rights, transmitting malware or harmful code, or engaging in fraudulent activities.<br/><br/>
            <b>6. Updates and Modifications:</b> We may update or modify Splash from time to time to improve functionality, address security issues, or comply with legal requirements. You agree to accept such updates and modifications and to continue to be bound by these terms and conditions.<br/><br/>
            <b>7. Termination:</b> We reserve the right to terminate or suspend your access to Splash at any time without prior notice or liability for any reason, including but not limited to a breach of these terms and conditions.<br/><br/>
            <b>8. Feedback:</b> We welcome your feedback, suggestions, and comments regarding Splash. You agree that any feedback you provide may be used by us without restriction or obligation to you.<br/><br/>
            <b>9. Governing Law:</b> These terms and conditions shall be governed by and construed in accordance with the laws of Canada.<br/><br/>
            By using Splash, you acknowledge that you have read, understood, and agree to be bound by these terms and conditions. If you do not agree with any part of these terms and conditions, you must not use the App.<br/><br/>
            For questions or concerns regarding these terms and conditions, please contact us at <a href="mailto:info@splash.ca">info@splash.ca</a>.<br/><br/>
            Last updated: 03/25/2024
        ]]>
    </string>
</resources>