<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_calendar"
        android:icon="@drawable/ic_twotone_calendar_today_24"
        android:title="@string/title_calendar" />

    <item
        android:id="@+id/navigation_analysis"
        android:icon="@drawable/ic_baseline_equalizer_24"
        android:title="@string/title_analysis" />

    <item
        android:id="@+id/navigation_add"
        android:icon="@drawable/ic_twotone_add_24"
        android:title="@string/title_add" />

    <item
        android:id="@+id/navigation_content"
        android:icon="@drawable/ic_twotone_description_24"
        android:title="@string/title_content" />

    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/ic_twotone_account_circle_24"
        android:title="@string/title_profile" />

</menu>