<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_calendar">

    <fragment
        android:id="@+id/navigation_calendar"
        android:name="cs486.splash.ui.calendar.CalendarFragment"
        android:label="@string/title_calendar"
        tools:layout="@layout/fragment_calendar" />

    <fragment
        android:id="@+id/navigation_analysis"
        android:name="cs486.splash.ui.analysis.AnalysisFragment"
        android:label="@string/title_analysis"
        tools:layout="@layout/fragment_analysis" />

    <fragment
        android:id="@+id/navigation_add"
        android:name="cs486.splash.ui.add.AddFragment"
        android:label="@string/title_add"
        tools:layout="@layout/fragment_add" >
        <action
            android:id="@+id/action_navigation_add_to_navigation_calendar"
            app:destination="@id/navigation_calendar" />
    </fragment>

    <fragment
        android:id="@+id/navigation_content"
        android:name="cs486.splash.ui.content.ContentFragment"
        android:label="@string/title_content"
        tools:layout="@layout/fragment_content" />

    <fragment
        android:id="@+id/navigation_profile"
        android:name="cs486.splash.ui.profile.ProfileFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_profile" />
</navigation>